tests/baselines/reference/implementsClauseAlreadySeen.errors.txt
==== tests/cases/compiler/implementsClauseAlreadySeen.ts (1 errors) ====
    class C {
        
    }
    class D implements C implements C {
                         ~~~~~~~~~~~~
!!! implementsClauseAlreadySeen.ts(4,22): error TS1027: 'implements' clause already seen.
        baz() { }
    }